# stanley

./: .gitignore  CMakeLists.txt  Makefile
app/: main.cpp
src/: board.c  board.cpp  board.h  board.hpp  common.h  main.c  main.cpp  move.c  move.cpp  move.h  move.hpp  movegen.cpp  movegen.hpp  position.cpp  position.hpp
tests/: CMakeLists.txt  test_board.c  test_board.cpp  test_main.c  test_main.cpp  test_move.c  test_move.cpp  test_movegen.cpp  test_position.cpp
